# VerseVaani

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  IMPROVEMENTS.md  Makefile  README.md  Report.md  api_client.py  config.py  dev.ps1  pyproject.toml  railway.json  render.yaml  requirements.txt  streamlit_app.py  test_versevaani.py  utils.py  vercel_build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  general.md  refactoring.md
.github/PULL_REQUEST_TEMPLATE/: bug.md  default.md  documentation.md  feature_request.md  refactoring.md
.gitlab/issue_templates/: bug.md  default.md  documentation.md  feature_request.md  refactoring.md
.gitlab/merge_request_templates/: bug.md  default.md  documentation.md  feature_request.md  refactoring.md
.streamlit/: config.toml
