[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "versevaani"
version = "0.1.0"
description = "A Sanskrit shloka explainer"
requires-python = ">=3.9"
dependencies = [
  "streamlit",
  "requests",
]

[project.scripts]
versevaani = "streamlit_app:main"

[tool.uv]
pip-compile = { requirements = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["versevaani"]
namespaces = false